fixed spacing and added styling to button

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ body {
 
 input {
     height:26px;
-    width: 80%;
 }
 
 .sign-up {
@@ -54,16 +53,17 @@ input {
     width:100%;
     justify-content: space-around;
     background-color: #ffffff;
-    padding-right: 5%;
     box-shadow: 0px 0px 8px gray;
+    padding: 0% 0% 3% 5%;
+    overflow: none;
 }
 
 .form-element {
     display: flex;
     flex-direction: column;
-    padding: 26px;
-    width:40%;
+    width:220px;
     min-width: 200px;
+    padding: 3% 8% 0% 0%;
 }
 
 .logo-side {
@@ -76,4 +76,22 @@ input {
 
 .logo {
     max-height: 200px;
+}
+
+.create-account-button {
+    background-color: #596D48;
+    color: white;
+    font-weight: bold;
+    border: 0px;
+    border-radius: 5px;
+    height: 30px;
+    width: 150px;
+}
+
+.bottom {
+    padding: 5%;
+}
+
+.log-in-link {
+    color: #596D48
 }
